<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#46C3AC"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/info" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:text="@string/small"
                android:drawableLeft="@mipmap/ic_small1"
                android:drawableStart="@mipmap/ic_small1"
                />

               <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/medium"
                   android:drawableStart="@mipmap/ic_medium1"
                   android:drawableLeft="@mipmap/ic_medium1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/large"
                android:drawableStart="@mipmap/ic_large1"
                android:drawableLeft="@mipmap/ic_large1"/>

    </LinearLayout>

</LinearLayout>